--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@mui/material-nextjs": "^7.3.5",
+    "@supabase/supabase-js": "^2.83.0",
     "@tanstack/query-sync-storage-persister": "^5.90.12",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-query-next-experimental": "^5.91.0",
     "@tanstack/react-query-persist-client": "^5.90.12",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
     "next-auth": "^4.24.13",
