--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^11.0.5",
     "remixicon-react": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.7.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
