--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/material-nextjs": "^7.3.5",
     "@supabase/supabase-js": "^2.83.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/query-sync-storage-persister": "^5.90.12",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
