--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.66.1",
     "react-toastify": "^11.0.5",
     "remixicon-react": "^1.0.0",
+    "shadcn": "^3.5.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.7.1",
     "zod": "^4.1.12",
