--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@mui/material-nextjs": "^7.3.5",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.83.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/query-sync-storage-persister": "^5.90.12",
@@ -26,6 +28,9 @@
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
@@ -37,6 +42,7 @@
     "react-toastify": "^11.0.5",
     "remixicon-react": "^1.0.0",
     "shadcn": "^3.5.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "twitter-api-v2": "^1.28.0",
     "yup": "^1.7.1",
