feat: integrate BullMQ worker to publish due scheduled posts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     ".next/types/**/*.ts",
     "src/shared/api/api-client.jsx",
     ".next/dev/types/**/*.ts"
-  ],
+, "src/shared/libs/bullmq/queue.js", "src/shared/libs/bullmq/worker.js"  ],
   "exclude": [
     "node_modules"
   ]
