--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "ioredis": "^5.8.2",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
