--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# cursor / vscode
+.cursor/
+.vscode/
+
+# git worktrees (important)
+**/.cursor/worktrees/
