--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "^16.0.3",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
